--- a/app.css
+++ b/app.css
@@ -28,10 +28,13 @@
 md-sidenav {
   height: 100%;
   background-color: #3d81ee;
-/*  min-width: 100px !important;*/
+  min-width: 150px !important;
   width: 11vw !important;
-/*  max-width: 100px !important;*/
-  
+/*  overflow: hidden;*/
+  position: fixed;
+  top: 65px;
+  bottom: 0;
+  /*  max-width: 100px !important;*/
 }
 
 md-content {
@@ -46,7 +49,6 @@ md-content {
   margin: 0px 0px 0px 0px;
   border-radius: 0px;
   font-size: 16px;
-  
   color: #fff;
   line-height: 3;
 }
