--- a/app.css
+++ b/app.css
@@ -9,7 +9,63 @@ md-whiteframe {
   background: #fff;
 }
 
-#content {
+.catalog md-card {
+  display: block;
+  /*
+  padding: 2%;
+  margin: 1px;
+*/
+}
+
+.catalog md-card.flex-22 {
+  max-height: 100%;
+  box-sizing: border-box;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 24%;
+  -ms-flex: 1 1 24%;
+  flex: 1 1 24%;
+}
+
+.catalog md-card.flex-22:first-child,
+.catalog md-card.flex-22:nth-child(2) {
+  -webkit-box-flex: 2;
+  -webkit-flex: 2 46%;
+  -ms-flex: 2 46%;
+  flex: 2 46%;
+}
+
+.catalog md-card img {
+  max-width: 100%;
+}
+
+@media (min-width: 600px) and (max-width: 959px) {
+  html body .catalog md-card.flex-sm-46 {
+    max-height: 100%;
+    box-sizing: border-box;
+    -webkit-box-flex: 2;
+    -webkit-flex: 2 46%;
+    -ms-flex: 2 46%;
+    flex: 2 46%;
+  }
+}
+
+@media (max-width: 599px) {
+  html body .catalog md-card.flex-xs-80 {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 80%;
+    -ms-flex: 1 80%;
+    flex: 1 80%;
+  }
+  html body .catalog md-card.flex-xs-80:first-child,
+  html body .catalog md-card.flex-xs-80:nth-child(2) {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 80%;
+    -ms-flex: 1 80%;
+    flex: 1 80%;
+  }
+}
+
+.content {
   padding: 24px;
 }
 
@@ -19,7 +75,7 @@ md-whiteframe {
 
 .navbar {
   background-color: #154698;
-/*  box-shadow: 0 1px 1px #ccc;*/
+  /*  box-shadow: 0 1px 1px #ccc;*/
 }
 
 .navbar a {
@@ -74,15 +130,6 @@ md-content {
   line-height: 4;
 }
 
-.navBtn:hover {
-/*  background-color: #123456;*/
-}
-
-.clickSide {
-  padding-left: 0;
-  padding-right: 0;
-}
-
 .quizBtn {
   background-color: #3d81ee;
   font-size: 16px;
@@ -96,69 +143,120 @@ md-content {
 }
 
 
+/*             */
+/* Click Facts */
+/*             */
+
+.factSheet md-card {
+  display: block;
+  /*
+  padding: .6%;
+  margin: 1px;
+*/
+}
+
+.factSheet md-card.flex-22 {
+  box-sizing: border-box;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 24%;
+  -ms-flex: 1 1 24%;
+  flex: 1 1 20%;
+}
+
+@media (min-width: 600px) and (max-width: 959px) {
+  html body .factSheet md-card.flex-sm-46 {
+    max-height: 100%;
+    box-sizing: border-box;
+    -webkit-box-flex: 2;
+    -webkit-flex: 2 46%;
+    -ms-flex: 2 46%;
+    flex: 2 46%;
+  }
+}
+
+@media (max-width: 599px) {
+  html body .factSheet md-card.flex-xs-80 {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 80%;
+    -ms-flex: 1 80%;
+    flex: 1 80%;
+  }
+}
+
+.factSheet md-card img {
+  /*
+  max-width: 100%;
+  min-width: 30%;
+*/
+}
+
+
+/*         */
+/* Flipper */
+/*         */
+
+.factSheet flip {
+  -webkit-perspective: 800;
+/*  width: 400px;*/
+/*  height: 200px;*/
+/*  display: block;*/
 /*
-.navbar-default {
-  background-color: #3d81ee;
-  border-color: #2d62b6;
-  border-radius: 0;
-}
-.navbar-default .navbar-brand {
-  color: #ecf0f1;
-}
-.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
-  color: #10ec47;
-}
-.navbar-default .navbar-text {
-  color: #ecf0f1;
-}
-.navbar-default .navbar-nav > li > a {
-  color: #ecf0f1;
-}
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-  color: #10ec47;
-}
-.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-  color: #10ec47;
-  background-color: #2d62b6;
-}
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-  color: #10ec47;
-  background-color: #2d62b6;
-}
-.navbar-default .navbar-toggle {
-  border-color: #2d62b6;
-}
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-  background-color: #2d62b6;
-}
-.navbar-default .navbar-toggle .icon-bar {
-  background-color: #ecf0f1;
-}
-.navbar-default .navbar-collapse,
-.navbar-default .navbar-form {
-  border-color: rgb(59, 95, 137);
-}
-.navbar-default .navbar-link {
-  color: #ecf0f1;
-}
-.navbar-default .navbar-link:hover {
-  color: #10ec47;
+      position: relative;
+      margin: auto auto;
+*/
 }
 
-@media (max-width: 767px) {
-  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-    color: #ecf0f1;
-  }
-  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #10ec47;
-  }
-  .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #10ec47;
-    background-color: #2d62b6;
-  }
+.factSheet .flip .factCard.flipped {
+  -webkit-transform: rotatex(-180deg);
 }
 
-.carousel-control.left, .carousel-control.right {
-   background-image:none !important;
-   filter:none !important;
+.factSheet .flip .factCard {
+/*
+  width: 100%;
+  height: 100%;
+*/
+  -webkit-transform-style: preserve-3d;
+  -webkit-transition: 0.75s;
+  cursor: pointer;
+}
+
+
+.factSheet .flip .factCard .face {
+  position: relative;
+  -webkit-backface-visibility: hidden ;
+  z-index: 2;
+    font-size: 2em;
+    word-wrap: break-word;
+    text-align: justify;
+/*    line-height: 200px;*/
+
+}
+
+/*
+.factSheet .flip .factCard .front {
+  position: relative;
+  z-index: 1;
+}
+*/
+
+.factSheet .flip .factCard .back {
+  height: 0px;
+  -webkit-backface-visibility: hidden ;
+  -webkit-transform: rotatex(-180deg);
+}
+/*
+.factSheet .flip .factCard .front {
+  position: absolute;
+  z-index: 1;
+  cursor: pointer;
+}
+
+.factSheet .flip .factCard .back {
+  position: absolute;
+  z-index: 2;
+  -webkit-transform: rotatex(-180deg);
+  background: blue;
+  background: white;
+  color: black;
+  cursor: pointer;
 }*/
