Score position update

--- a/app/app.css
+++ b/app/app.css
@@ -142,6 +142,15 @@ md-content {
   background-color: #123456;
 }
 
+.quizArea {
+  padding: 0em 0em 0em 1em;
+  width: 50%;
+}
+
+.quizScore {
+  padding-right: 2em;
+}
+
 
 /*             */
 /* Click Facts */
